This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry, noting that the text on each line should not
be longer than the lines of dashes.

Al
-------------------------------------------------------------------------------

Sun Aug 26 10:54:19 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Clarified what is being incremented and decremented in sleepwake.c
	  up() and down() routines.

Sat Aug 25 23:32:20 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed bug in sleepwake.c . In down() *s-- was actualy decreasing the
	  address with funny results!. Changed to --*s.

Fri Aug 24 18:23:54 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Made /dev/tcpdev return EBUSY if used.

Thu Aug 23 23:43:28 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Fixed printout alignment error in arch/i86/kernel/printreg.c and
	  offered apologies to HarKal for the syntax error fixed below.
	* Reformatted CHANGELOG back to 80 columns.
	* Made `make dist` use the correct directory for pre-versions, and
	  simplified the creation of include/linuxmt/version.h in the
	  process.

Wed Aug 22 23:25:57 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed systax error in arch/i86/kernel/printreg.c

Wed Aug 22 21:35:29 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Added the needed functionality to enable processes to get info
	  and config the network. Look at the nettools directory in
	  elkscmd.

Tue Aug 21 18:50:53 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Changed in scripts/Menuconfig and scripts/Configure a "linux"
	  leftover to "linuxmt" that caused configuration header file not
	  to be writen.
	  
Tue Aug 21 18:09:08 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Whilst I was validating the printk() format strings, I came across
	  quite a few existing %o and %u format specifiers despite the fact